--- a/src/assets/img/favicon/index.html
+++ b/src/assets/img/favicon/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="canonical" href="https://paula-romero-darwinex.netlify.app/#/" />
+  <link rel="canonical" href="https://www.darwinex.com/es/" />
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
@@ -18,14 +18,14 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://paula-romero-darwinex.netlify.app/">
+  <meta property="og:url" content="https://www.darwinex.com/es/">
   <meta property="og:title" content="Darwinex - The Trader Exchange">
   <meta property="og:description" content="Darwinex - The Trader Exchange">
   <meta property="og:image" content="">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://paula-romero-darwinex.netlify.app/">
+  <meta property="twitter:url" content="https://www.darwinex.com/es/">
   <meta property="twitter:title" content="Darwinex - The Trader Exchange">
   <meta property="twitter:description" content="Darwinex - The Trader Exchange">
   <meta property="twitter:image" content="">
